fix input not visible enough

--- a/AcakKata/statics/css/home.css
+++ b/AcakKata/statics/css/home.css
@@ -50,6 +50,7 @@ table {
     padding: 8px;
     font-size: 1.125em;
     box-sizing: border-box;
+    color: white;
     opacity: 0.6;
 }
 
